gccida/c1/simplify_set
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5428:4: error: expected ';' after expression
rtx compound_operation; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5428:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rbx 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:367:12: note: 'make_compound_operation' declared here
static rtx make_compound_operation  PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5430:6: error: use of undeclared identifier 'v5'
rtx *v5; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5432:6: error: use of undeclared identifier 'single_use'; did you mean 'single_set_2'?
rtx *single_use; // rax 
     ^~~~~~~~~~
     single_set_2
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/rtl.h:1470:12: note: 'single_set_2' declared here
extern rtx single_set_2                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5432:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'rtx (rtx, rtx)' (aka 'struct rtx_def *(struct rtx_def *, struct rtx_def *)'))
rtx *single_use; // rax 
~~~ ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5433:6: error: use of undeclared identifier 'v8'
rtx *v8; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5434:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5434:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5435:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5437:6: error: use of undeclared identifier 'v12'
rtx *v12; // rdi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5441:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5444:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5449:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5458:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5467:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5470:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // [rsp+Ch] [rbp-8Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/combine.c:5474:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v50; // [rsp+10h] [rbp-88h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_set/src/obj/combine.o] Error 1
